--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         />
       </div>
       <div class="buttons">
-        <button class="btn" id="yesButton" onclick="nextPage()">Yes</button>
-        <button class="btn" id="noButton" onmouseover="moveButton()">No</button>
+        <button class="btn" id="yesButton" onmouseover="moveButton()">Yes</button>
+        <button class="btn" id="noButton" onclick="nextPage()">No</button>
         <script>
           function nextPage() {
             window.location.href = "yes.html";
@@ -29,13 +29,13 @@
             var x =
               Math.random() *
               (window.innerWidth -
-                document.getElementById("noButton").offsetWidth);
+                document.getElementById("yesButton").offsetWidth);
             var y =
               Math.random() *
               (window.innerHeight -
-                document.getElementById("noButton").offsetHeight);
-            document.getElementById("noButton").style.left = `${x}px`;
-            document.getElementById("noButton").style.top = `${y}px`;
+                document.getElementById("yesButton").offsetHeight);
+            document.getElementById("yesButton").style.left = `${x}px`;
+            document.getElementById("yesButton").style.top = `${y}px`;
           }
         </script>
       </div>
