--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       <div>
         <!-- <h1 class = "header_text">Do you wanna go out with me ehe</h1>
                 -->
-        <h1 class="header_text">Will you be my valentine?</h1>
+        <h1 class="header_text">Should I study?</h1>
       </div>
       <div class="gif_container">
         <img
-          src="https://media.giphy.com/media/LnKonfpQ44fNvuGLkA/giphy.gif"
+          src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExM2ZzaXhuaHMxang1eTNmb21oNmZkd25ybjc0a3IxcnZweDVwZ2s2NSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/g0EKaqx07Q851MYlue/giphy.gif"
           alt="Cute animated illustration"
         />
       </div>
