--- a/yes.html
+++ b/yes.html
@@ -7,12 +7,12 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Yippie!!! </h1>
+                <h1 class = "header_text">So now.. </h1>
             </div>
             <div class="gif_container">
-                <img src="./style/images/https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMDhneWRzbDJtb2szYjVvandnZzR6eXhnYzk4bjVtYW10Zm05cG1tbSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/QC1Gp8ZTABAyzYhraI/giphy.gif" alt="Cute animated illustration">
+                <img src="./style/images/tiktok.png">
             </div>
-            <p class = "text"> You are cute fr hehe</p>
+            <p class = "text"> Its time for more tiktoks</p>
         </div>
        
     </body> 
