--- a/yes.html
+++ b/yes.html
@@ -10,7 +10,7 @@
                 <h1 class = "header_text">So now.. </h1>
             </div>
             <div class="gif_container">
-                <img src="./style/images/tiktok.png">
+                <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMzNjMDl6MXdrN3BpejZkNGgwdWV3NDNqOGV3cGVjYWxpNjg2dHE1MyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/jS2pgTIhhTuAqneaF0/giphy.gif">
             </div>
             <p class = "text"> Its time for more tiktoks</p>
         </div>
